* 2014-05-02 - tobias.friedrich@open-xchange.com

 - Fix for bug 32259: Exclude folders with files storage type TRASH_FOLDER
 - Fix for bug 32267: Translate subscription display name when serializing subscription sources

* 2014-04-30 - tobias.friedrich@open-xchange.com

 - Fix for bug 29904: Throw "FILE_STORAGE-0017" in case of empty or missing "folder" parameter

* 2014-04-30 - martin.schneider@open-xchange.com

 - Fix for bug 32036: Use 'transport_auth' for setting SMTP credentials usage. 

* 2014-04-29 - tobias.friedrich@open-xchange.com

 - Fix for bug 32221: Supply reference to old parent folder ID in folder update event
 - Fix for bug 32169: Added debug logging to track down unnatural big JSlobs

* 2014-04-29 - thorben.betten@open-xchange.com

 - Fix for bug 32211: Removed usage of removed String constructor in JSON bundle + Proper reflection-wise look-up of "extendedProvider" field in Java8
 - Fix for bug 31842: Provide human-readable quota information
 - Fix for bug 32238: Do not pre-acquire Writer from HTTP response to leave room for error responses
 - Fix for bug 32239: Filter associated account's address from recipient list

* 2014-04-28 - martin.herfurth@open-xchange.com

 - Fix for bug 32059: Added port to connection string for distributed files.

* 2014-04-28 - marcus.klein@open-xchange.com

 - Fix for bug 32044: Update the reminder's folderID for all accessing users, if there are no participants.

* 2014-04-28 - ioannis.chouklis@open-xchange.com

 - Fix for bug 32149: Improved POP3 validation warning message.

* 2014-04-28 - tobias.friedrich@open-xchange.com

 - Fix for bug 32200: Added import from and export to csv for "categories" property
 - Fix for bug 32216: Respond with "SRV-0001" in case the capability service is missing
 
* 2014-04-25 - tobias.friedrich@open-xchange.com

 - Fix for bug 25701: Consider "pref" in "TEL" properties of vCards 
 - Fix for bug 32193: Don't try to deliver null events 
 
* 2014-04-25 - thorben.betten@open-xchange.com